<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormFragment"
    android:background="@drawable/recipe_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nuova_ricetta"
            android:textAlignment="center"
            android:textSize="35sp"
            android:fontFamily="serif"
            android:textColor="@color/white"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:scrollbarThumbVertical="@null">

            <androidx.cardview.widget.CardView
                xmlns:Card_View="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:padding="10dp"
                Card_View:cardCornerRadius="5dp"
                Card_View:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:orientation="vertical">


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <EditText
                            android:id="@+id/formRecipeTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/inserisci_il_titolo_della_ricetta"
                            android:inputType="text"
                            android:maxLines="1"
                            android:paddingStart="5dp"
                            android:singleLine="true"/>

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <EditText
                            android:id="@+id/formRecipeDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/inserisci_la_descrizione_della_ricetta"
                            android:inputType="text"
                            android:maxLines="5"
                            android:paddingStart="5dp"
                            android:singleLine="true"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/formSubmitButton"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="20dp"
                        android:background="@drawable/button_gradient"
                        android:text="@string/aggiungi_la_nuova_ricetta"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </ScrollView>
    </LinearLayout>
</FrameLayout>